LU-4557 ldiskfs: pre-mount/umount ldiskfs to fix inconsistency

If OSS crashes when there is active I/O, the free block/inode number
in super block will be false. That will cause inconsistency of ldiskfs
after OSS service is up. This patch fixes this problem by pre-mount/
umount ldiskfs.

Signed-off-by: Li Xi <lixi@ddn.com>
Change-Id: I68effb0851cb5aa9582e0d94652c759754b5aac4